# patbot_self_driving

./: README.md
patbotsd/: CMakeLists.txt  package.xml
patbotsd/include/: patbotsd_asus_groundfloor_remove.h  patbotsd_filter_hokuyo.h  patbotsd_laser_asus.h  patbotsd_map_maker_laser_asus_directions.h  patbotsd_map_maker_laser_asus_range_cones.h  patbotsd_map_maker_laser_asus_rotation.h
patbotsd/launch/: patbotsd_asus.launch  patbotsd_directions_navigation.launch  patbotsd_navigation.launch  patbotsd_navigation.rviz  patbotsd_slam_gmapping.launch
patbotsd/src/: patbotsd_asus_groundfloor_remove.cpp  patbotsd_filter_hokuyo.cpp  patbotsd_laser_asus.cpp  patbotsd_map_maker_laser_asus_directions.cpp  patbotsd_map_maker_laser_asus_range_cones.cpp  patbotsd_map_maker_laser_asus_rotation.cpp
patbotsd_description/: CMakeLists.txt  package.xml
patbotsd_description/launch/: display_patbot.launch
patbotsd_description/meshes/: patbot.dae  patbot.skb  patbot.skp  patbot_structure.dae  patbot_structure.skb  patbot_structure.skp
patbotsd_description/urdf/: asus_kinect__gazebo.urdf.xacro  asus_kinect_properties.urdf.xacro  macros.xacro  materials.xacro  patbot.gazebo  patbot.xacro  turtlebot_properties.urdf.xacro  urdf.rviz
patbotsd_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  kinect.urdf.xacro
